[gd_scene load_steps=7 format=2]

[ext_resource path="res://img/Tshooter.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/turret.gd" type="Script" id=2]
[ext_resource path="res://img/chargeBar.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.310152, 2.74915 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 24 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0
height = 9.762

[node name="turret" type="KinematicBody2D" groups=[
"Enemies",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.00727, 0.5 )
rotation = -3.14159
scale = Vector2( 54.8354, -4.91062 )
shape = SubResource( 1 )

[node name="Tshooter" type="Sprite" parent="."]
position = Vector2( 3.12167, 9.39308e-06 )
rotation = 1.5708
scale = Vector2( 0.5, 0.532208 )
texture = ExtResource( 1 )

[node name="chargeMeter" type="TextureProgress" parent="."]
margin_left = -17.4877
margin_top = -2.67604
margin_right = 23.5123
margin_bottom = 9.32396
rect_scale = Vector2( 1, 0.5 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0.847059, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shieldHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shieldHitBox"]
position = Vector2( 18, -0.5 )
shape = SubResource( 2 )

[node name="enemyHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyHitbox"]
position = Vector2( -4.881, 0 )
rotation = 1.5708
shape = SubResource( 3 )

[connection signal="area_entered" from="shieldHitBox" to="." method="_on_shieldHitBox_area_entered"]
[connection signal="area_entered" from="enemyHitbox" to="." method="_on_enemyHitbox_area_entered"]
